# taiji

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  PROJECT_ARCHITECTURE.md  README.md  README_MODEL.md  SECURITY.md  _add_smart_crawl.py  _fix_bing.py  _fix_search.py  _test_fts.py  app_settings.json  build_desktop.bat  dev.bat  docker-compose.yml  patch.py  prometheus.yml  pyproject.toml  requirements-autodl.txt  requirements-optional.txt  requirements.txt  start_desktop.bat  start_taiji.py  version.json
api/: __init__.py  api_server.py  app.py  chat_strategies.py  cli.py  main.py  models.py  models_runtime.py  routes_agent.py  routes_agent_mcp.py  routes_agent_memory.py  routes_agent_workspace.py  routes_auth.py  routes_chat.py  routes_life.py  routes_model_switch.py  routes_models.py  routes_multimodal.py  routes_plugins.py  routes_rag.py  routes_runtime.py  routes_settings.py  routes_system.py  routes_taiji.py  routes_taiji_model.py  routes_terminal.py  routes_training.py  routes_update.py  routes_workflows.py  run_app.py
checkpoint-400000/: config.json  sentencepiece.model  tokenizer_contract.json
configs/: deepspeed_zero2.json  deepspeed_zero2_4090d.json  deepspeed_zero3_7b.json
desktop/: __init__.py  build.py  installer.nsi  loading.html  main.py  settings.json  taiji.spec
docs/: 1B_BASE_AND_MULTIMODAL_PLAN_CN.md  1B_DATA_GAP_REPORT_CN.md  1B_NATIVE_V2训练教程.md  ARCHITECTURE.md  ARCHITECTURE_EN.md  AUTODL_4090D_1B_FULL_RUNBOOK_CN.md  CODE_REVIEW_REPORT_2026-06-23.md  DEVELOPMENT_ROADMAP_2026.md  ENTRYPOINTS.md  ENTRYPOINTS_EN.md  EVALUATION_REPORT.md  FEED_AND_TRAIN.md  INSTALL.md  INSTALL_EN.md  MODULES.md  NATIVE_V2_TOKENIZER.md  README.md  RESONANCE_FIELD_ARCHITECTURE.md  TAIJI_1B_12B_TOKEN_TRAINING_PLAN_CN.md  TAIJI_2_0_ARCHITECTURE_CONSOLIDATION.md  TAIJI_DESIGN.md  TRAIN_NOW_CHECKLIST_CN.md  VOICE_INTERFACE.md  autodl_native_v2_guide.md  autodl_training_guide.md
frontend/: index.html  package-lock.json  package.json  shoot-fe.cjs  vite.config.js
scripts/: autodl_bootstrap.py  autodl_check.sh  autodl_kernel_exec.py  build.sh  build_balanced_native_vocab_corpus.py  cleanup_local_data.bat  (+10 more)
(+339 files in other folders)
